--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/caches
+.idea/*
 vcs.xml
 .DS_Store
 /build
