--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: android
+sudo: required
+jdk: oraclejdk8
 android:
   components:
   - tools
+  - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
   - platform-tools
   - build-tools-28.0.3
   - android-28
-  - extra
+  - extra-android-m2repository
 
-  - sys-img-x86-android-26
-  - sys-img-armeabi-v7a-android-17
+before_install:
+- yes | sdkmanager "platforms;android-28"
+- chmod +x gradlew
+script:
+- ./gradlew build connectedCheck
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
