--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,27 @@ android:
   - android-28
   - extra-android-m2repository
 
+env:
+  global:
+  - ANDROID_TARGET=android-15
+  - ANDROID_ABI=armeabi-v7a
+
 before_install:
 - yes | sdkmanager "platforms;android-28"
 - chmod +x gradlew
+
 script:
+- ./gradlew build jacocoTestReport assembleAndroidTest
+- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
 - ./gradlew build connectedCheck
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
   - $HOME/.gradle/caches/
@@ -27,3 +39,6 @@ cache:
 
 licenses:
 - '.+'
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
