--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 - chmod +x gradlew
 
 script:
-- ./gradlew build jacocoTestReport assembleAndroidTest
+- ./gradlew build assembleAndroidTest
 - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
