--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,13 @@ android:
   - android-28
   - extra-android-m2repository
 
-env:
-  global:
-  - ANDROID_TARGET=android-15
-  - ANDROID_ABI=armeabi-v7a
-
 before_install:
 - yes | sdkmanager "platforms;android-28"
 - chmod +x gradlew
 
 script:
 - ./gradlew build assembleAndroidTest
-- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+- echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
