--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,29 @@
 language: android
 sudo: required
 jdk: oraclejdk8
+env:
+  global:
+  - ANDROID_API_LEVEL=28
+  - ANDROID_BUILD_TOOLS_VERSION=28.0.3
 android:
   components:
   - tools
-  - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
   - platform-tools
-  - build-tools-28.0.3
-  - android-28
+  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+  - android-$ANDROID_API_LEVEL
   - extra-android-m2repository
+  - extra-google-m2repository
+  - addon-google_apis-google-$ANDROID_API_LEVEL
+
+licenses:
+- '.+'
 
 before_install:
 - yes | sdkmanager "platforms;android-28"
 - chmod +x gradlew
 
 script:
-- ./gradlew build assembleAndroidTest
-- echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
-- emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-- ./gradlew build connectedCheck
+- ./gradlew build check
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -31,9 +34,6 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
   - $HOME/.android/build-cache
-
-licenses:
-- '.+'
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
