--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ env:
   global:
   - ANDROID_API_LEVEL=28
   - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+  - ANDROID_TARGET=android-15
+  - ANDROID_ABI=armeabi-v7a
 android:
   components:
   - tools
@@ -14,6 +16,7 @@ android:
   - extra-android-m2repository
   - extra-google-m2repository
   - addon-google_apis-google-$ANDROID_API_LEVEL
+  - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
 
 licenses:
 - '.+'
@@ -23,7 +26,12 @@ before_install:
 - chmod +x gradlew
 
 script:
-- ./gradlew build check
+- ./gradlew build jacocoTestReport assembleAndroidTest
+- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+- ./gradlew connectedCheck
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
